# MontagePy

./: .gitignore  README.md  build.py  config.sample.yaml  pyproject.toml
montagepy/: __init__.py  config.py  logger.py  main.py  processor.py  utils.py  video_info.py
montagepy/cli/: __init__.py  commands.py  main.py  types.py
montagepy/cli/commands/: __init__.py  gif.py  jpg.py
montagepy/cli/options/: __init__.py  appearance.py  common.py
montagepy/converters/: __init__.py  gif_converter.py
montagepy/core/: __init__.py  config.py  handlers.py  layout.py  logger.py  models.py
montagepy/extractors/: __init__.py  clip_extractor.py  frame_extractor.py
montagepy/gui/: __init__.py  main.py  workers.py
montagepy/gui/assets/: icon.icns
montagepy/gui/widgets/: file_list.py
montagepy/gui/windows/: main_window.py
montagepy/renderers/: __init__.py  gif_montage_renderer.py  montage_renderer.py
montagepy/utils/: __init__.py  color_utils.py  file_utils.py  format_utils.py  grid_utils.py
